--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						necessitatibus
 						corrupti mollitia expedita sapiente cum rerum, ut dicta laboriosam!</p>
 				</div>
-				<div class="copy">© pumpum</div>
+				<div class="copy">© istredo</div>
 			</article>
 
 
